# Raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  scene1.h
materials/: CMakeLists.txt  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
shapes/: CMakeLists.txt  color.cpp  color.h  hittable.h  hittable_list.cpp  hittable_list.h  sphere.cpp  sphere.h
utils/: CMakeLists.txt  camera.h  color.cpp  color.h  color_utils.cpp  color_utils.h  constants.h  dielectric.h  hittable.h  hittable_list.cpp  hittable_list.h  lambertian.h  material.h  metal.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vector3.cpp  vector3.h
